[tool.poetry]
name = "secureaccess"
version = "2.0.202510221109"
description = "Cisco Secure Access Platform SDK for Python"
authors = ["Raghavendra R rrevanap", "Yaron Caspy yaronca", "Akhil Nair akhinair", "Subrahmanya Mayya smayya"]
license = "Apache-2.0"
homepage = "https://developer.cisco.com/docs/cloud-security/"
repository = "https://github.com/CiscoDevNet/cisco-secure-access-python-sdk"
keywords = ["Cisco", "Secure Access", "SDK", "Cloud Security", "SSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
]
readme = "README.md"
packages = [{include = "secure_access"}]

[tool.poetry.urls]
"Documentation" = "https://github.com/CiscoDevNet/cisco-secure-access-python-sdk/blob/main/README.md"
"Bug Tracker" = "https://github.com/CiscoDevNet/cisco-secure-access-python-sdk/issues"
"Changelog" = "https://github.com/CiscoDevNet/cisco-secure-access-python-sdk/releases"

[tool.poetry.dependencies]
python = "^3.9"
urllib3 = "^2.1.0, <3.0.0"
python-dateutil = "^2.8.2"
pydantic = "^2.0.0"
typing-extensions = "^4.7.1"
lazy-imports = "^1.0.0, <2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-rerunfailures = "^12.0.0"
flake8 = "^6.1.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.0"
ipython = "^8.14.0"
setuptools = ">=78.1.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.0"
sphinx-rtd-theme = "^2.0.0"
sphinx-autodoc-typehints = "^1.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=secure_access --cov-report=term-missing --cov-report=html"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

